Fix security: rewrite SecurityConfig for SB4/SS7, remove duplicate CorsConfig, use property-driven CORS origins